--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,24 +28,29 @@
         %a.navbar-brand(href="#") CooperativeManagementSystem
         .navbar-collapse.collapse.navbar-responsive-collapse
           %ul.nav.navbar-nav
-            %li= link_to "Zarejestruj się", new_user_registration_path
-            %li= link_to "Zaloguj się", new_user_session_path
-            %li= link_to "Wyloguj się", destroy_user_session_path, :method => :delete
+            - if user_signed_in?
+              %li= link_to "Produkty", products_path
+              %li= link_to "Moje konto", user_path(current_user)
+              %li= link_to "Wyloguj się", destroy_user_session_path, :method => :delete
+            - else
+              %li= link_to "Zarejestruj się", new_user_registration_path
+              %li= link_to "Zaloguj się", new_user_session_path
 
 
     .container
       .row
-        .col-lg-3
-          .well.sidebar-nav
-            %h3 Sidebar
-            %ul.nav.nav-list
-              %li.nav-header Sidebar
-              %li= link_to "Producenci", "/path1"
-              %li= link_to "Produkty", "/path2"
-              %li= link_to "Zamówienia", "/path3"
-        .col-lg-9
-          %p.notice= notice
-          %p.alert= alert
+        / .col-lg-3
+        /   .well.sidebar-nav
+        /     %h3 Sidebar
+        /     %ul.nav.nav-list
+        /       %li.nav-header Sidebar
+        /       %li= link_to "Producenci", "/path1"
+        /       %li= link_to "Produkty", "/path2"
+        /       %li= link_to "Zamówienia", "/path3"
+        / .col-lg-9
+        .col-lg-12
+          / %p.notice= notice
+          / %p.alert= alert
           = bootstrap_flash
           = yield
       %footer
