--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -1,1 +1,5 @@
-Hi there!
+.jumbotron
+  %h1 Wawelska Kooperatywa Spożywcza
+  %p Kooperatywa spożywcza jest rodzajem nieformalnej spółdzielni, w której członkowie wspólnie kupują produkty spożywcze bezpośrednio od producentów, z pominięciem pośredników.
+  %p
+    =link_to "Dowiedz się o nas więcej »", about_path, class: 'btn btn-lg btn-primary'
