--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -27,3 +27,23 @@
 = link_to t('.back', :default => t("helpers.links.back")), products_path, :class => 'btn btn-default'
 = link_to t('.edit', :default => t("helpers.links.edit")), edit_product_path(@product), :class => 'btn btn-default'
 = link_to t('.destroy', :default => t("helpers.links.destroy")), product_path(@product), :method => "delete", :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-danger'
+
+%h2 Komentarze do produktu
+.comments
+  - @product.product_comments.each do |comment|
+    .well
+      %strong
+        Autor
+      %div
+        %em
+          = comment.content
+
+= form_for [@product, ProductComment.new] do |f|
+
+  .form-group
+    = f.label :content, "Treść komentarza"
+    = f.text_area :content, class: 'form-control'
+    = f.error_message_on(:content)
+
+  %div.actions
+    = f.submit "Dodaj komentarz", :class => 'btn btn-primary'
