--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -28,6 +28,13 @@
     = f.text_area :address, class: 'form-control'
     = f.error_message_on(:address)
 
+  .form-group
+    = hidden_field_tag "user[role_ids][]"
+    - for role in Role.all
+      %div
+        = check_box_tag "user[role_ids][]", role.id, @user.roles.include?(role), :disabled =>  (role.name == 'user' ?  true : false )
+        = role.name
+
   %div.actions
     = f.submit "Zapisz zmiany", :class => 'btn btn-primary'
 
