--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -4,6 +4,10 @@
     = f.text_field :name, class: 'form-control'
     = error_span(@product[:name])
   .form-group
+    = f.label :producer_id, "Producent"
+    = f.collection_select(:producer_id, Producer.all, :id, :name, prompt: "Wybierz producenta")
+    = error_span(@product[:producer_id])
+  .form-group
     = f.label :is_active, "Dostępny?"
     = f.check_box :is_active, class: 'form-control'
     = error_span(@product[:is_active])
