--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,29 +1,30 @@
-- model_class = Product
 .page-header
-  %h1=t '.title', :default => model_class.model_name.human.pluralize.titleize
+  %h1 Produkty
+
+= link_to 'Dodaj nowy', new_product_path, :class => 'btn btn-primary'
+
 %table.table.table-striped
   %thead
     %tr
-      %th= model_class.human_attribute_name(:id)
-      %th= model_class.human_attribute_name(:name)
-      %th= model_class.human_attribute_name(:description)
-      %th= model_class.human_attribute_name(:is_active)
-      %th= model_class.human_attribute_name(:price)
-      %th= model_class.human_attribute_name(:unit)
-      %th= model_class.human_attribute_name(:created_at)
+      %th Nazwa
+      %th Producent
+      %th Dostępny?
+      %th Cena
+      %th Jednostka
       %th=t '.actions', :default => t("helpers.actions")
   %tbody
     - @products.each do |product|
       %tr
-        %td= link_to product.id, product_path(product)
-        %td= product.name
-        %td= product.description
-        %td= product.is_active
+        %td= link_to product.name, product_path(product)
+        %td= product.producer.name
+        %td
+          - if product.is_active
+            Tak
+          - else
+            Nie
         %td= product.price
         %td= product.unit
-        %td=l product.created_at
         %td
           = link_to t('.edit', :default => t("helpers.links.edit")), edit_product_path(product), :class => 'btn btn-default btn-xs'
           = link_to t('.destroy', :default => t("helpers.links.destroy")), product_path(product), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-xs btn-danger'
 
-= link_to t('.new', :default => t("helpers.links.new")), new_product_path, :class => 'btn btn-primary'
