--- a/app/views/producers/edit.html.haml
+++ b/app/views/producers/edit.html.haml
@@ -1,4 +1,3 @@
-- model_class = Producer
 .page-header
-  %h1=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize
+  %h1= @producer.name
 = render :partial => "form"
