--- a/app/views/producers/index.html.haml
+++ b/app/views/producers/index.html.haml
@@ -4,24 +4,22 @@
 %table.table.table-striped
   %thead
     %tr
-      %th= model_class.human_attribute_name(:id)
-      %th= model_class.human_attribute_name(:name)
-      %th= model_class.human_attribute_name(:description)
-      %th= model_class.human_attribute_name(:is_active)
-      %th= model_class.human_attribute_name(:address)
-      %th= model_class.human_attribute_name(:phone)
-      %th= model_class.human_attribute_name(:created_at)
-      %th=t '.actions', :default => t("helpers.actions")
+      %th Nazwa
+      %th Adres
+      %th Telefon
+      %th Aktywny?
+      %th &nbsp;
   %tbody
     - @producers.each do |producer|
       %tr
-        %td= link_to producer.id, producer_path(producer)
-        %td= producer.name
-        %td= producer.description
-        %td= producer.is_active
+        %td= link_to producer.name, producer_path(producer)
         %td= producer.address
         %td= producer.phone
-        %td=l producer.created_at
+        %td
+          - if producer.is_active
+            Tak
+          - else
+            Nie
         %td
           = link_to t('.edit', :default => t("helpers.links.edit")), edit_producer_path(producer), :class => 'btn btn-default btn-xs'
           = link_to t('.destroy', :default => t("helpers.links.destroy")), producer_path(producer), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-xs btn-danger'
