--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -1,32 +1,34 @@
 .page-header
   %h1= @product.name
 
-%p
-  %strong Producent
-  %br
-  = @product.producer.name
-%p
-  %strong Dostępny?
-  %br
-  - if @product.is_active
-    Tak
-  - else
-    Nie
-%p
-  %strong Cena
-  %br
-  = @product.price
-%p
-  %strong Jednostka
-  %br
-  = @product.unit
-- if @product.description
-  %p
-    %strong Opis
-    %br
-    = @product.description
+.row
+  .col-lg-3
+    %p
+      %strong Producent
+      %br
+      = link_to @product.producer.name, producer_path(@product.producer)
+    %p
+      %strong Dostępny?
+      %br
+      - if @product.is_active
+        Tak
+      - else
+        Nie
+    %p
+      %strong Cena
+      %br
+      = @product.price
+    %p
+      %strong Jednostka
+      %br
+      = @product.unit
+  .col-lg-9
+    - if @product.description
+      %p
+        %strong Opis
+        %br
+        = @product.description
 
-= link_to t('.back', :default => t("helpers.links.back")), products_path, :class => 'btn btn-default'
 = link_to t('.edit', :default => t("helpers.links.edit")), edit_product_path(@product), :class => 'btn btn-default'
 = link_to t('.destroy', :default => t("helpers.links.destroy")), product_path(@product), :method => "delete", :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-danger'
 
