user address, producer address

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -21,4 +21,4 @@
   .form-group
     = f.submit "Załóż konto", class: 'btn btn-primary'
 
-= render "devise/shared/links"
+/ # = render "devise/shared/links"
