--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -20,7 +20,9 @@
   .div
     %strong
       Adres
-    = @user.address
+    = @user.city
+    = @user.street
+    = @user.zip_code
 
   .div
     %strong
