--- a/app/views/producers/_form.html.haml
+++ b/app/views/producers/_form.html.haml
@@ -1,13 +1,39 @@
 = simple_form_for @producer, :html => { :class => 'form-horizontal' } do |f|
-  = f.input :name
-  = error_span(@producer[:name])
-  = f.input :description
-  = error_span(@producer[:description])
-  = f.input :is_active
-  = error_span(@producer[:is_active])
-  = f.input :address
-  = error_span(@producer[:address])
-  = f.input :phone
-  = error_span(@producer[:phone])
-  = f.button :submit, :class => 'btn-primary'
+  .form-group
+    = f.label :name, "Nazwa"
+    = f.text_field :name, class: 'form-control'
+    = f.error_message_on(:name)
+
+  .form-group
+    = f.label :is_active, "Dostępny?"
+    = f.check_box :is_active, class: 'form-control'
+    = f.error_message_on(:is_active)
+
+  .form-group
+    = f.label :city, "Miejscowość"
+    = f.text_field :city, class: 'form-control'
+    = f.error_message_on(:city)
+
+  .form-group
+    = f.label :city, "Miejscowość"
+    = f.text_field :city, class: 'form-control'
+    = f.error_message_on(:city)
+
+  .form-group
+    = f.label :street, "Ulica"
+    = f.text_field :street, class: 'form-control'
+    = f.error_message_on(:street)
+
+  .form-group
+    = f.label :zip_code, "Kod pocztowy"
+    = f.text_field :zip_code, class: 'form-control'
+    = f.error_message_on(:zip_code)
+
+  .form-group
+    = f.label :description, "Opis"
+    = f.text_area :description, class: 'form-control'
+    = f.error_message_on(:description)
+
+  = f.submit 'Zapisz', :class => 'btn btn-primary'
+
   = link_to t('.cancel', :default => t("helpers.links.cancel")), producers_path, :class => 'btn btn-default'
