--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -11,6 +11,8 @@
       %th Dostępny?
       %th Cena
       %th Jednostka
+      - if current_user.has_any_role? :admin
+        %th &nbsp;
       %th &nbsp;
   %tbody
     - @products.each do |product|
@@ -24,7 +26,11 @@
             Nie
         %td= product.price
         %td= product.unit
+        - if current_user.has_any_role? :admin
+          %td
+            = link_to t('.edit', :default => t("helpers.links.edit")), edit_product_path(product), :class => 'btn btn-default btn-xs'
+            = link_to t('.destroy', :default => t("helpers.links.destroy")), product_path(product), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Czy na pewno chcesz usunąć?')) }, :class => 'btn btn-xs btn-danger'
         %td
-          = link_to t('.edit', :default => t("helpers.links.edit")), edit_product_path(product), :class => 'btn btn-default btn-xs'
-          = link_to t('.destroy', :default => t("helpers.links.destroy")), product_path(product), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-xs btn-danger'
+          - if product.is_active
+            = link_to 'Dodaj do zamówienia', '#'
 
