--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -2,7 +2,7 @@
   %h1= @product.name
 
 .row
-  .col-lg-3
+  .col-lg-6
     %p
       %strong Producent
       %br
@@ -22,7 +22,7 @@
       %strong Jednostka
       %br
       = @product.unit
-  .col-lg-9
+  .col-lg-6
     - if @product.description
       %p
         %strong Opis
@@ -30,7 +30,7 @@
         = @product.description
 
 = link_to t('.edit', :default => t("helpers.links.edit")), edit_product_path(@product), :class => 'btn btn-default'
-= link_to t('.destroy', :default => t("helpers.links.destroy")), product_path(@product), :method => "delete", :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-danger'
+= link_to t('.destroy', :default => t("helpers.links.destroy")), product_path(@product), :method => "delete", :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Czy na pewno chcesz usunąć?')) }, :class => 'btn btn-danger'
 
 %h2 Komentarze do produktu
 .comments
