--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -24,16 +24,31 @@
     = f.error_message_on(:phone)
 
   .form-group
-    = f.label :address, "Adres"
-    = f.text_area :address, class: 'form-control'
-    = f.error_message_on(:address)
+    = f.label :city, "Miasto"
+    = f.text_field :city, class: 'form-control'
+    = f.error_message_on(:city)
 
   .form-group
-    = hidden_field_tag "user[role_ids][]"
-    - for role in Role.all
-      %div
-        = check_box_tag "user[role_ids][]", role.id, @user.roles.include?(role), :disabled =>  (role.name == 'user' ?  true : false )
-        = role.name
+    = f.label :street, "Ulica"
+    = f.text_field :street, class: 'form-control'
+    = f.error_message_on(:street)
+
+  .form-group
+    = f.label :zip_code, "Kod pocztowy"
+    = f.text_field :zip_code, class: 'form-control'
+    = f.error_message_on(:zip_code)
+
+  - if current_user.has_role :admin
+    .form-group
+      = hidden_field_tag "user[role_ids][]"
+      - for role in Role.all
+        %div
+          = check_box_tag "user[role_ids][]", role.id, @user.roles.include?(role), :disabled =>  (role.name == 'user' ?  true : false )
+          = role.name
+    .form-group
+      = f.label :is_active, "Dostępny?"
+      = f.check_box :is_active, class: 'form-control'
+      = f.error_message_on(:is_active)
 
   %div.actions
     = f.submit "Zapisz zmiany", :class => 'btn btn-primary'
